# warehouse_ros_sqlite

./: CMakeLists.txt  README.md  dummy_database_connection_plugin_description.xml  package.xml  sqlite_database_connection_plugin_description.xml
include/warehouse_ros_dummy/: client.h  config.h  database_connection.h  message_collection.h  metadata.h  query_results.h
include/warehouse_ros_sqlite/: client.h  config.h  database_connection.h  message_collection.h  metadata.h  query_results.h
src/: database_connection.cpp  message_collection.cpp  query_results.cpp
test/: test_dummy_helpers.h  test_sqlite_helpers.h  test_warehouse_ros_dummy.cpp  test_warehouse_ros_sqlite.cpp
