<package>
  <name>warehouse_ros_dummy</name>
  <version>0.0.1</version>
  <description>
    Dummy Implementation of warehouse_ros
  </description>
  <author email="bhaskara@willowgarage.com">Bhaskara Marthi</author>
  <author email="cbrew@fetchrobotics.com">Connor Brew</author>
  <maintainer email="isucan@google.com">Ioan Sucan</maintainer>

  <license>BSD</license>
  <license>Apache 2.0</license>
  <license>GNU Affero General Public License</license>
  <license>zlib</license>

  <url>http://ros.org/wiki/warehouse_ros_dummy</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>warehouse_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>warehouse_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>std_msgs</run_depend>

  <test_depend>gtest</test_depend>

  <export>
    <warehouse_ros plugin="${prefix}/dummy_database_connection_plugin_description.xml"/>
  </export>

</package>
